<project>
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.0</version>
        <relativePath/>
    </parent>

    <groupId>io.github.jakedegiovanni.comicshelf</groupId>
    <artifactId>comicshelf</artifactId>
    <version>${revision}</version>

    <name>Comicshelf</name>
    <description>Keep track of upcoming issues.</description>

    <packaging>pom</packaging>

    <modules>
        <module>sdk</module>
        <module>server</module>
    </modules>

    <properties>
        <revision>0.0.1-SNAPSHOT</revision>

        <java.version>21</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <!--
        This maven flag is not recognised by IntelliJ hence the need to manually configure in the plugins sections. See:
        - https://youtrack.jetbrains.com/issue/IDEA-296303/Support-for-Maven-Compiler-Plugin-enablePreview-parameter
        - https://github.com/JetBrains/intellij-community/pull/2340
        -->
        <maven.compiler.enablePreview>true</maven.compiler.enablePreview>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <jte.version>3.1.4</jte.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.jakedegiovanni.comicshelf.sdk</groupId>
                <artifactId>comicshelf-sdk</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>gg.jte</groupId>
                <artifactId>jte-spring-boot-starter-3</artifactId>
                <version>${jte.version}</version>
            </dependency>

            <dependency>
                <groupId>gg.jte</groupId>
                <artifactId>jte</artifactId>
                <version>${jte.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>